--- a/WindowsApp1/My Project/Resources.resx
+++ b/WindowsApp1/My Project/Resources.resx
@@ -130,20 +130,20 @@
   <data name="multi-edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\multi-edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="isologotipo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\isologotipo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="exit_icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\exit_icon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="google-groups" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\google-groups.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="isologotipo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\isologotipo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="user-group-man-man" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user-group-man-man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="checkmark-filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\checkmark-filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="group-foreground-selected" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\group-foreground-selected.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="delete-shield" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete-shield.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,8 +154,8 @@
   <data name="delete-book-trash-education-remove-30d96a3dea2d0c0a-512x512" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete-book-trash-education-remove-30d96a3dea2d0c0a-512x512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="find-user-male" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\find-user-male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="create_user_group-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\create_user_group-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="conference-background-selected-filled1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\conference-background-selected-filled1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,8 +181,8 @@
   <data name="configuration_gears" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\configuration_gears.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="binoculars" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\binoculars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="remove-user-female" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\remove-user-female.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sentence-case1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sentence-case1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -193,8 +193,8 @@
   <data name="remove-borders" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\remove-borders.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="remove-user-male1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\remove-user-male1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="search-filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\search-filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="print" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\print.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -205,14 +205,32 @@
   <data name="datadear-multiple-worksheets-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\datadear-multiple-worksheets-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="find-user-male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\find-user-male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="google-groups" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\google-groups.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="remove-user-male1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\remove-user-male1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="132224-200" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\132224-200.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="binoculars" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\binoculars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="create_user_man_male-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\create_user_man_male-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="conference-background-selected-filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\conference-background-selected-filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="save-tabs-list-filled1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\save-tabs-list-filled1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="images" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\images.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="remove-user-male" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\remove-user-male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -223,11 +241,8 @@
   <data name="download" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\download.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="add-user-group-man-man" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\add-user-group-man-man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="database-import" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\database-import.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="add-user-group-woman-man" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add-user-group-woman-man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="trash-filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trash-filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -244,8 +259,14 @@
   <data name="add-books-read-literature-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\add-books-read-literature-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="add-user-group-man-man" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add-user-group-man-man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="application-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\application-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="eraser" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eraser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -259,14 +280,14 @@
   <data name="pencil-filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pencil-filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="edit-user-male-filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\edit-user-male-filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="calificaciones" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\calificaciones.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="datadear-record-your-workings-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\datadear-record-your-workings-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="search-filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\search-filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="database-import" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\database-import.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="printer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\printer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -277,13 +298,16 @@
   <data name="database-restore" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\database-restore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="jar-loading" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\jar-loading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="noun_713090_cc-e1484300306678" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\noun_713090_cc-e1484300306678.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="group-foreground-selected" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\group-foreground-selected.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="edit-user-male-filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edit-user-male-filled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="jar-loading" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\jar-loading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="download1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
