--- a/WindowsApp1/Ventanas/ventana_historial.resx
+++ b/WindowsApp1/Ventanas/ventana_historial.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Label2.Text" xml:space="preserve">
-    <value>La contraseña debe tener un formato seguro. Para esto debe : comenzar con letra mayuscula, contener al menos dos letras de la a a la z minisculas o mayusculas, un numero, y uno de los siguientes simbolos : "@!</value>
-  </data>
+  <metadata name="rch_query.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
